Update Abgabe 6 Bujanowski.ipynb

--- a/Abgabe 6 Bujanowski.ipynb
+++ b/Abgabe 6 Bujanowski.ipynb
@@ -1088,8 +1088,8 @@
     "count: \n",
     "Im Vergleich zu der Anzahl von Reihen im df rodenkirchen ist die count-Angabe kleiner - 8737.000000 zu 8393.000000. Ich gehe davon aus, dass der Grund ist, dass es in der Spalte \"Stickstoffdioxid\" na_values gab.\n",
     "\n",
-    "mean vs. 50%: \n",
-    "Der Medianwert (mean) liegt bei 21.746408. Ich denke, 50% stehen für Durchschnittswert. Der Unterschied ist zwar da, aber er kommt mir nicht kritisch vor. Trotzdem ist es wichtig, den Medianwert zu ermitteln. Er ist, meine ich, verlässlicher als der Durchschnittswert, weil der Durchschnittswert durch ein paar Ausreißer geändert werden kann.\n",
+    "mean: \n",
+    "Der Durchschnittswert (mean) liegt bei 21.746408. Trotzdem wäre es wichtig, auch den Medianwert zu ermitteln. Er ist, meine ich, verlässlicher als der Durchschnittswert, weil der Durchschnittswert durch ein paar Ausreißer geändert werden kann.\n",
     "\n",
     "min: \n",
     "min liegt hier bei 0.600000. Ich verstehe es so, dass man immer Stickstoffdioxid in der Luft hat, nur manchmal sind die Mengen sehr klein."
